Fix null checks and improve instantiation in JavascriptEngineHandler
- Added null check for methodToUse before invoking factory.
- Updated instantiation method to use getDeclaredConstructor.
- Removed deprecated suppression in ActionBar class.